テスト/src/objects/follow_SFO__c.object
<CustomObject>
    <fields>
        <fullName>Sys_next_follow_limit__c</fullName>
        <formula>IF ( MONTH ( contact_date__c ) = 12 , DATE ( YEAR ( contact_date__c ) + 1 , 1 , 31 ) , DATE ( YEAR ( contact_date__c ) , MONTH ( contact_date__c ) + 2 , 1 ) - 1 )</formula>
        <label>【非表示】次回フォロー期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sys_staffstatus__c</fullName>
        <formula>TEXT( staff__r.staffstatus__c )</formula>
        <label>【非表示】スタッフ状況</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>連絡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>contact_person__c</fullName>
        <label>連絡担当者</label>
        <picklist>
            <picklistValues>
                <fullName>古賀</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>岡橋</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>employment_type__c</fullName>
        <label>雇用形態</label>
        <picklist>
            <picklistValues>
                <fullName>正社員</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約社員</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アルバイト</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>followdetail__c</fullName>
        <label>内容</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>from_pasona__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>パソナ社が紹介した求人案件で決定した場合はチェック</inlineHelpText>
        <label>うちパソナからの紹介</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>interview_date__c</fullName>
        <label>面接日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>interview_scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>面接予定あり</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joined_company__c</fullName>
        <label>企業名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>結果</label>
        <picklist>
            <picklistValues>
                <fullName>採用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不採用</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>scheduled_joined_date__c</fullName>
        <label>入社予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <label>スタッフ</label>
        <referenceTo>staff_SFO__c</referenceTo>
        <relationshipName>follow_staff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>就職状況</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>F{yymmdd}{000}</displayFormat>
        <label>管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>